test/scc/expr/semantic-errors/045.t
void test()
{
    float a;
    2 % a;
}